--- a/k8s/manifests/comment-service.yaml
+++ b/k8s/manifests/comment-service.yaml
@@ -8,8 +8,8 @@ metadata:
 type: Opaque
 stringData:
   username: commentuser
-  password: commentpass123
-  root-password: rootpass123
+  password: CHANGE_ME_BEFORE_DEPLOYMENT
+  root-password: CHANGE_ME_BEFORE_DEPLOYMENT
 ---
 # Comment Service Deployment
 apiVersion: apps/v1
