--- a/k8s/manifests/mongodb.yaml
+++ b/k8s/manifests/mongodb.yaml
@@ -37,7 +37,7 @@ spec:
         - name: MONGO_INITDB_ROOT_USERNAME
           value: "root"
         - name: MONGO_INITDB_ROOT_PASSWORD
-          value: "example"
+          value: "CHANGE_ME_BEFORE_DEPLOYMENT"
         - name: MONGO_INITDB_DATABASE
           value: "PostServiceDb"
         volumeMounts:
@@ -85,7 +85,7 @@ spec:
         - name: MONGO_INITDB_ROOT_USERNAME
           value: "root"
         - name: MONGO_INITDB_ROOT_PASSWORD
-          value: "example"
+          value: "CHANGE_ME_BEFORE_DEPLOYMENT"
         - name: MONGO_INITDB_DATABASE
           value: "CommentServiceDb"
         volumeMounts:
