--- a/k8s/manifests/post-service.yaml
+++ b/k8s/manifests/post-service.yaml
@@ -8,8 +8,8 @@ metadata:
 type: Opaque
 stringData:
   username: postuser
-  password: postpass123
-  root-password: rootpass123
+  password: CHANGE_ME_BEFORE_DEPLOYMENT
+  root-password: CHANGE_ME_BEFORE_DEPLOYMENT
 ---
 # Post Service Deployment
 apiVersion: apps/v1
