Update manifests to use Docker Hub images (jaapsmit)

--- a/k8s/manifests/api-gateway.yaml
+++ b/k8s/manifests/api-gateway.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
       - name: api-gateway
-        image: apigateway:latest
-        imagePullPolicy: Never
+        image: jaapsmit/facebibble-api-gateway:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         resources:
