--- a/k8s/manifests/keycloak.yaml
+++ b/k8s/manifests/keycloak.yaml
@@ -104,8 +104,8 @@ spec:
         command: ["start-dev"]
         resources:
           requests:
-            memory: "512Mi"
-            cpu: "500m"
+            memory: \"256Mi\"
+            cpu: \"100m\"
           limits:
-            memory: "1Gi"
-            cpu: "1000m"
+            memory: \"512Mi\"
+            cpu: \"300m\"
